--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/table.js": "/js/table.js",
     "/js/upload.js": "/js/upload.js",
     "/js/asset.js": "/js/asset.js",
+    "/js/edit.js": "/js/edit.js",
     "/css/app.css": "/css/app.css"
 }
